# terraso-allauth

./: .editorconfig  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pyvenv.cfg  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: dependabot.yml  test.yml
requirements/: requirements-dev-py310.txt  requirements-dev-py311.txt  requirements-dev-py312.txt  requirements-dev-py313.txt  requirements-dev-py38.txt  requirements-dev-py39.txt  requirements-dev.in  requirements-dev.txt  requirements-dj2.in  requirements-dj2.txt  requirements-dj3.in  requirements-dj3.txt  requirements-dj4.in  requirements-dj4.txt  requirements-dj5.in  requirements-dj5.txt  requirements.in  requirements.txt
terraso_allauth/: adapter.py  provider.py  urls.py  views.py
tests/: settings.py  test_urls.py  test_views.py  urls.py
