[project]
name = "terraso_allauth"
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.ruff]
exclude = ["migrations"]
line-length = 100

[tool.ruff.lint.isort]
known-first-party = ["terraso_allauth"]

[tool.ruff.lint]
extend-ignore = ["E203"]
