[metadata]
name = terraso-allauth
description = A Django app to plug Terraso as a provider to django-allauth.
long_description = file: README.md
url = https://www.github.com/techmatters/terraso-allauth
author = Terraso Developers
author_email = info@terraso.org
license = AGPL-3
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: AGPL-3 License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8

[flake8]
max-line-length = 100
extend-ignore = E203

[tool:pytest]
django_find_project = false
DJANGO_SETTINGS_MODULE=tests.settings
pythonpath = . terraso_allauth
python_files = tests.py test_*.py *_tests.py
addopts = --nomigrations

[coverage:run]
source = .
omit =
  */migrations/*
  */tests/*
  */test_*.py
  .tox

[coverage:report]
ignore_errors = True
show_missing = True
